--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=ugioni_playwright-e2e
-sonar.organization=ugioni
+sonar.projectKey=Guichardx2_prova03-playwright-jeanGuichard
+sonar.organization=guichardx2
 sonar.projectName=Playwright E2E
 sonar.projectVersion=1.0
 sonar.sources=./src
